--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
+    <meta property="og:title" content="Movie Tracker" />
+    <meta property="og:description" content="Manages movies and shit, I don't know" />
+    <meta property="og:type"  content="website" />
+    <meta property="og:image" content="%PUBLIC_URL%/preview_image.jpg" />
     <title>React Redux App</title>
   </head>
   <body>
