Fixed title and description

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Manages movies and shit, I don't know"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -29,7 +29,7 @@
     <meta property="og:description" content="Manages movies and shit, I don't know" />
     <meta property="og:type"  content="website" />
     <meta property="og:image" content="%PUBLIC_URL%/preview_image.jpg" />
-    <title>React Redux App</title>
+    <title>Movie Tracker</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
